--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-meta-title: "Light Up Your Style"
+meta-title: "Du lịch dễ dàng – Visa nhanh chóng"
 bigimg:
-- "/img/Picture-HSL/banner-hoop.jpg"
+- "/img/Picture-HSL/japan-background.jpg"
 ---
 
 <!-- subtitle: Khởi Nguồn Ánh Sáng
@@ -19,7 +19,7 @@ meta-title: "Happy Smart Light" -->
 <div class="content-index" style="
       background: 
         linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%), 
-        url('/img/Picture-HSL/banner-index.jpg');
+        url('/img/Picture-HSL/taiwan.jpg');
       background-size: cover; /* Ảnh nền bao phủ toàn bộ vùng */
       background-position: center; /* Căn giữa ảnh nền */
       background-repeat: no-repeat; /* Không lặp lại ảnh nền */
@@ -66,7 +66,7 @@ meta-title: "Happy Smart Light" -->
 <div class="content-index" style="
       background: 
         linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%), 
-        url('/img/Picture-HSL/HSL-index.png');
+        url('/img/Picture-HSL/taiwan.jpg');
       background-size: cover; /* Ảnh nền bao phủ toàn bộ vùng */
       background-position: center; /* Căn giữa ảnh nền */
       background-repeat: no-repeat; /* Không lặp lại ảnh nền */
@@ -112,7 +112,7 @@ meta-title: "Happy Smart Light" -->
 <div class="content-index" style="
       background: 
         linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%), 
-        url('/img/Picture-HSL/HSL-index.png');
+        url('/img/Picture-HSL/taiwan.jpg');
       background-size: cover; /* Ảnh nền bao phủ toàn bộ vùng */
       background-position: center; /* Căn giữa ảnh nền */
       background-repeat: no-repeat; /* Không lặp lại ảnh nền */
@@ -151,11 +151,11 @@ meta-title: "Happy Smart Light" -->
 
 <div class="gradient-bg">
   <div class="gradient-text">
-    <P>được tạo ra bởi</P><h2>✨HAPPY SMART LIGHT✨</h2>
+    <P>được cung cấp dịch vụ bởi</P><h2>✨HÙNG VĨ TOURIST✨</h2>
     <br>
     <div class="text-center">
-      <a target="_blank" rel="noopener" href="/" class="project-link" title="✨HAPPY SMART LIGHT✨">
-        <img src="{{ site.baseurl }}/img/Picture-HSL/trans_hsl.svg" class="img-rounded" loading="lazy" alt="✨HAPPY SMART LIGHT✨" width="30%" />
+      <a target="_blank" rel="noopener" href="/" class="project-link" title="✨HÙNG VĨ TOURIST✨">
+        <img src="{{ site.baseurl }}/img/Picture-HSL/logo-trans.png" class="img-rounded" loading="lazy" alt="✨HÙNG VĨ TOURIST✨" width="30%" />
       </a>
     </div>
   </div>
