--- a/index.html
+++ b/index.html
@@ -24,77 +24,83 @@ bigimg:
       background-position: center; /* Căn giữa ảnh nền */
       background-repeat: repeat; /* Không lặp lại ảnh nền */
         ">
-	<div class="summary">
-	✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨
-	</div>
-	<div class="description-content-index-sp">
-  🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
-  ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
-  🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
-	</div>
-{% assign hascategoryPosts = false %}
-<div class="details">
-  {% for post in site.tours limit:20 %}
+  <div class="summary">
+    ✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨
+  </div>
+  <div class="description-content-index-sp">
+    🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
+    ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
+    🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
+  </div>
+  {% assign hascategoryPosts = false %}
+  <div class="details">
+    {% for post in site.tours limit:20 %}
     {% if post.categories contains "special-offer" %}
-      <div class="component">
-        <div class="image-container">
-          {% if post.image %}
-            <!-- Ảnh đại diện bài đăng -->
-            <a href="{{ post.url | prepend: site.baseurl }}">
-              <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
-            </a>
-            <!-- Nhãn khuyến mãi -->
-            <div class="promo-label">Giảm -{{ post.discount }}%</div>
-            <!-- Địa điểm -->
-            <div class="location-label">
-              <i class="fas fa-map-marker-alt"></i> {{ post.location }}
-            </div>
-          {% endif %}
-        </div>
-        {% assign raw_price = post.price | replace: ".", "" %}
-        {% assign price = raw_price | plus: 0 %}
-        {% assign discount = post.discount | plus: 0 %}
-        {% assign discount_amount = price | times: discount | divided_by: 100 %}
-        {% assign final_price = price | minus: discount_amount %}
-
-        <!-- Tiêu đề bài đăng -->
+    <div class="component">
+      <div class="image-container">
+        {% if post.image %}
+        <!-- Ảnh đại diện bài đăng -->
         <a href="{{ post.url | prepend: site.baseurl }}">
-          <div class="component-name">
-            <div class="title-label">
-              {% if post.meta-title %}
-                {{ post["meta-title"] }}
-              {% else %}
-                {{ post.title }}
-              {% endif %}
-            </div>
-            <div class="tour-info">
-              <div class="tour-duration">⏱ Thời gian: {{ post.duration }}</div>
-              <div class="tour-price">
-                {% if post.discount %}
-                  <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
-                  <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
-                {% else %}
-                  <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
-                {% endif %}
-              </div>
-            </div>
-          </div>
+          <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
         </a>
-      </div>
-      {% assign hascategoryPosts = true %}
+        {% if post.discount %}
+        <!-- Nhãn khuyến mãi -->
+        <div class="promo-label">Giảm -{{ post.discount }}%</div>
+        {% endif %}
+        {% if post.location %}
+        <!-- Địa điểm -->
+        <div class="location-label">
+          <i class="fas fa-map-marker-alt"></i> {{ post.location }}
+        </div>
+        {% endif %}
+        {% endif %}
+      </div> <!-- .image-container -->
+      {% assign raw_price = post.price | replace: ".", "" %}
+      {% assign price = raw_price | plus: 0 %}
+      {% assign discount = post.discount | plus: 0 %}
+      {% assign discount_amount = price | times: discount | divided_by: 100 %}
+      {% assign final_price = price | minus: discount_amount %}
+
+      <!-- Tiêu đề bài đăng -->
+      <a href="{{ post.url | prepend: site.baseurl }}">
+        <div class="component-name">
+          <div class="title-label">
+            {% if post.meta-title %}
+            {{ post["meta-title"] }} | ⏱ {{ post.duration }}
+            {% else %}
+            {{ post.title }}
+            {% endif %}
+          </div>
+          <div class="tour-info">
+            <div class="tour-price">
+              {% if post.discount %}
+              <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
+              <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
+              {% else %}
+              <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
+              {% endif %}
+            </div> <!-- /.tour-price -->
+          </div> <!-- /.tour-info -->
+        </div> <!-- .component-name -->
+      </a>
+    </div> <!-- .component -->
+    {% assign hascategoryPosts = true %}
     {% endif %}
-  {% endfor %}
+    {% endfor %}
 
-  <!-- Nếu không có bài nào -->
-  {% unless hascategoryPosts %}
+    <!-- Nếu không có bài nào -->
+    {% unless hascategoryPosts %}
     <div class="text-center">
-      <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi tiết.</p>
+      <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
+        tiết.</p>
       {% include qr-zalo.html %}
-    </div>
-  {% endunless %}
-</div>
+    </div> <!-- .text-center -->
+    {% endunless %}
+  </div> <!-- /.details -->
+</div> <!-- /#international -->
 
 
+<!-- Layer 2 -->
 
 <div class="gradient-bg">
   <div class="gradient-text">
@@ -105,80 +111,85 @@ bigimg:
 <div id="international" class="content-index" style="
       background: 
         linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%), 
-        url('/img/Picture-HSL/background-2.svg');
+        url('/img/Picture-HSL/background-3.svg');
       background-size: cover; /* Ảnh nền bao phủ toàn bộ vùng */
       background-position: center; /* Căn giữa ảnh nền */
-      background-repeat: no-repeat; /* Không lặp lại ảnh nền */
+      background-repeat: repeat; /* Không lặp lại ảnh nền */
         ">
-	<div class="summary">
-	✨Tour Quốc Tế✨
-	</div>
-	<div class="description-content-index-sp">
-  🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
-  ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
-  🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
-	</div>
-{% assign hascategoryPosts = false %}
-<div class="details">
-  {% for post in site.tours limit:20 %}
+  <div class="summary">
+    ✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨
+  </div>
+  <div class="description-content-index-sp">
+    🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
+    ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
+    🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
+  </div>
+  {% assign hascategoryPosts = false %}
+  <div class="details">
+    {% for post in site.tours limit:20 %}
     {% if post.category == 'tours#international' %}
-      <div class="component">
-        <div class="image-container">
-          {% if post.image %}
-            <!-- Ảnh đại diện bài đăng -->
-            <a href="{{ post.url | prepend: site.baseurl }}">
-              <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
-            </a>
-            <!-- Nhãn khuyến mãi -->
-            <div class="promo-label">Giảm -{{ post.discount }}%</div>
-            <!-- Địa điểm -->
-            <div class="location-label">
-              <i class="fas fa-map-marker-alt"></i> {{ post.location }}
-            </div>
-          {% endif %}
-        </div>
-        {% assign raw_price = post.price | replace: ".", "" %}
-        {% assign price = raw_price | plus: 0 %}
-        {% assign discount = post.discount | plus: 0 %}
-        {% assign discount_amount = price | times: discount | divided_by: 100 %}
-        {% assign final_price = price | minus: discount_amount %}
-
-        <!-- Tiêu đề bài đăng -->
+    <div class="component">
+      <div class="image-container">
+        {% if post.image %}
+        <!-- Ảnh đại diện bài đăng -->
         <a href="{{ post.url | prepend: site.baseurl }}">
-          <div class="component-name">
-            {% if post.meta-title %}
-              {{ post["meta-title"] }}
-            {% else %}
-              {{ post.title }}
-            {% endif %}
-            <br><br>
-            <div class="tour-info">
-              <div class="tour-duration">⏱ Thời gian: {{ post.duration }}</div>
-              <div class="tour-price">
-                {% if post.discount %}
-                  💰<span class="old-price">{{ price | format_price }}</span><br>
-                  💰<span class="new-price">{{ final_price | format_price }}</span>
-                {% else %}
-                  💰 {{ post.price }}
-                {% endif %}
-              </div>
-            </div>
-          </div>
+          <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
         </a>
-      </div>
-      {% assign hascategoryPosts = true %}
+        {% if post.discount %}
+        <!-- Nhãn khuyến mãi -->
+        <div class="promo-label">Giảm -{{ post.discount }}%</div>
+        {% endif %}
+        {% if post.location %}
+        <!-- Địa điểm -->
+        <div class="location-label">
+          <i class="fas fa-map-marker-alt"></i> {{ post.location }}
+        </div>
+        {% endif %}
+        {% endif %}
+      </div> <!-- .image-container -->
+      {% assign raw_price = post.price | replace: ".", "" %}
+      {% assign price = raw_price | plus: 0 %}
+      {% assign discount = post.discount | plus: 0 %}
+      {% assign discount_amount = price | times: discount | divided_by: 100 %}
+      {% assign final_price = price | minus: discount_amount %}
+
+      <!-- Tiêu đề bài đăng -->
+      <a href="{{ post.url | prepend: site.baseurl }}">
+        <div class="component-name">
+          <div class="title-label">
+            {% if post.meta-title %}
+            {{ post["meta-title"] }} | ⏱ {{ post.duration }}
+            {% else %}
+            {{ post.title }}
+            {% endif %}
+          </div>
+          <div class="tour-info">
+            <div class="tour-price">
+              {% if post.discount %}
+              <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
+              <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
+              {% else %}
+              <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
+              {% endif %}
+            </div> <!-- /.tour-price -->
+          </div> <!-- /.tour-info -->
+        </div> <!-- .component-name -->
+      </a>
+    </div> <!-- .component -->
+    {% assign hascategoryPosts = true %}
     {% endif %}
-  {% endfor %}
+    {% endfor %}
 
-  <!-- Nếu không có bài nào -->
-  {% unless hascategoryPosts %}
+    <!-- Nếu không có bài nào -->
+    {% unless hascategoryPosts %}
     <div class="text-center">
-      <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi tiết.</p>
+      <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
+        tiết.</p>
       {% include qr-zalo.html %}
-    </div>
-  {% endunless %}
-</div>
-
+    </div> <!-- .text-center -->
+    {% endunless %}
+  </div> <!-- /.details -->
+</div> <!-- /#international -->
 
 <!-- Layer 4 -->
 
