--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ bigimg:
       background: 
         linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%), 
         url('/img/Picture-HSL/background-3.svg');
-      background-size: cover; /* Ảnh nền bao phủ toàn bộ vùng */
-      background-position: center; /* Căn giữa ảnh nền */
-      background-repeat: repeat; /* Không lặp lại ảnh nền */
-        ">
+      background-size: cover;
+      background-position: center;
+      background-repeat: repeat;
+    ">
   <div class="summary">
     ✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨
   </div>
@@ -32,72 +32,86 @@ bigimg:
     ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
     🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
   </div>
+
   {% assign hascategoryPosts = false %}
-  <div class="details">
-    {% for post in site.tours limit:20 %}
-    {% if post.categories contains "special-offer" %}
-    <div class="component">
-      <div class="image-container">
-        {% if post.image %}
-        <!-- Ảnh đại diện bài đăng -->
-        <a href="{{ post.url | prepend: site.baseurl }}">
-          <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
-        </a>
-        {% if post.discount %}
-        <!-- Nhãn khuyến mãi -->
-        <div class="promo-label">Giảm -{{ post.discount }}%</div>
-        {% endif %}
-        {% if post.location %}
-        <!-- Địa điểm -->
-        <div class="location-label">
-          <i class="fas fa-map-marker-alt"></i> {{ post.location }}  {% if post.transport %}  |  {{ post.transport }}  {% endif %}
-        </div>
-        {% endif %}
-        {% endif %}
-      </div> <!-- .image-container -->
-      {% assign raw_price = post.price | replace: ".", "" %}
-      {% assign price = raw_price | plus: 0 %}
-      {% assign discount = post.discount | plus: 0 %}
-      {% assign discount_amount = price | times: discount | divided_by: 100 %}
-      {% assign final_price = price | minus: discount_amount %}
 
-      <!-- Tiêu đề bài đăng -->
-      <a href="{{ post.url | prepend: site.baseurl }}">
-        <div class="component-name">
-          <div class="title-label">
-            {% if post.meta-title %}
-            {{ post["meta-title"] }} 
-              {% if post.duration %} | ⏱ {{ post.duration }} {% endif %}
-            {% else %}
-            {{ post.title }}
+  <!-- Swiper container -->
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      {% for post in site.tours limit:20 %}
+      {% if post.categories contains "special-offer" %}
+      <div class="swiper-slide">
+        <div class="component">
+          <div class="image-container">
+            {% if post.image %}
+            <!-- Ảnh đại diện bài đăng -->
+            <a href="{{ post.url | prepend: site.baseurl }}">
+              <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
+            </a>
+            {% if post.discount %}
+            <!-- Nhãn khuyến mãi -->
+            <div class="promo-label">Giảm -{{ post.discount }}%</div>
             {% endif %}
-          </div>
-          <div class="tour-info">
-            <div class="tour-price">
-              {% if post.discount %}
-              <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
-              <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
-              {% else %}
-              <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
-              {% endif %}
-            </div> <!-- /.tour-price -->
-          </div> <!-- /.tour-info -->
-        </div> <!-- .component-name -->
-      </a>
-    </div> <!-- .component -->
-    {% assign hascategoryPosts = true %}
-    {% endif %}
-    {% endfor %}
+            {% if post.location %}
+            <!-- Địa điểm -->
+            <div class="location-label">
+              <i class="fas fa-map-marker-alt"></i> {{ post.location }}
+              {% if post.transport %} | {{ post.transport }} {% endif %}
+            </div>
+            {% endif %}
+            {% endif %}
+          </div> <!-- .image-container -->
 
-    <!-- Nếu không có bài nào -->
-    {% unless hascategoryPosts %}
-    <div class="text-center">
-      <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
-        tiết.</p>
-      {% include qr-zalo.html %}
-    </div> <!-- .text-center -->
-    {% endunless %}
-  </div> <!-- /.details -->
+          {% assign raw_price = post.price | replace: ".", "" %}
+          {% assign price = raw_price | plus: 0 %}
+          {% assign discount = post.discount | plus: 0 %}
+          {% assign discount_amount = price | times: discount | divided_by: 100 %}
+          {% assign final_price = price | minus: discount_amount %}
+
+          <!-- Tiêu đề bài đăng -->
+          <a href="{{ post.url | prepend: site.baseurl }}">
+            <div class="component-name">
+              <div class="title-label">
+                {% if post.meta-title %}
+                {{ post["meta-title"] }} {% if post.duration %} | ⏱ {{ post.duration }} {% endif %}
+                {% else %}
+                {{ post.title }}
+                {% endif %}
+              </div>
+              <div class="tour-info">
+                <div class="tour-price">
+                  {% if post.discount %}
+                  <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
+                  <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
+                  {% else %}
+                  <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </a>
+        </div> <!-- /.component -->
+      </div> <!-- /.swiper-slide -->
+      {% assign hascategoryPosts = true %}
+      {% endif %}
+      {% endfor %}
+    </div> <!-- /.swiper-wrapper -->
+
+    <!-- Pagination dots -->
+    <div class="swiper-pagination"></div>
+    <!-- Navigation arrows -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div> <!-- /.swiper -->
+
+  <!-- Nếu không có bài nào -->
+  {% unless hascategoryPosts %}
+  <div class="text-center">
+    <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
+      tiết.</p>
+    {% include qr-zalo.html %}
+  </div>
+  {% endunless %}
 </div> <!-- /#international -->
 
 
@@ -208,3 +222,4 @@ bigimg:
 </div>
 
 {% include form-booking.html %}
+
