Tăts hiển thị các nút nhấn chuyển slide

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@ bigimg:
     </div> <!-- /.swiper-wrapper -->
 
     <!-- Pagination dots -->
-    <div class="swiper-pagination"></div>
+    <!-- <div class="swiper-pagination"></div> -->
     <!-- Navigation arrows -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
+    <!-- <div class="swiper-button-prev"></div> -->
+    <!-- <div class="swiper-button-next"></div> -->
   </div> <!-- /.swiper -->
 
   <!-- Nếu không có bài nào -->
