--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ bigimg:
 - "/img/Picture-HSL/background-3.svg"
 ---
 
-<!-- Layer 1 OTHER -->
+<!-- Layer 1 ưu đãi -->
 
 <div class="gradient-bg">
   <div class="gradient-text">
@@ -16,9 +16,9 @@ bigimg:
   </div>
 </div>
 
-<div id="international" class="content-index" style="
+<div id="special-offer" class="content-index" style="
       background: 
-        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%), 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), 
         url('/img/Picture-HSL/background-3.svg');
       background-size: cover;
       background-position: center;
@@ -28,9 +28,10 @@ bigimg:
     ✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨
   </div>
   <div class="description-content-index-sp">
-    🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
-    ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
-    🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
+    🎉 Giảm giá sốc lên đến 30% cho tour hot nhất.<br>
+    ✈️ Ưu đãi vé máy bay & khách sạn trọn gói.<br>
+    🕒 Số lượng có hạn – chỉ áp dụng hôm nay!<br>
+    👉 Đặt ngay để không bỏ lỡ cơ hội vàng!
   </div>
 
   {% assign hascategoryPosts = false %}
@@ -115,7 +116,7 @@ bigimg:
 </div> <!-- /#international -->
 
 
-<!-- Layer 2 -->
+<!-- Layer 2 tour nước ngoài -->
 
 <div class="gradient-bg">
   <div class="gradient-text">
@@ -125,87 +126,315 @@ bigimg:
 
 <div id="international" class="content-index" style="
       background: 
-        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%), 
-        url('/img/Picture-HSL/background-3.svg');
-      background-size: cover; /* Ảnh nền bao phủ toàn bộ vùng */
-      background-position: center; /* Căn giữa ảnh nền */
-      background-repeat: repeat; /* Không lặp lại ảnh nền */
-        ">
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), 
+        url('/img/Picture-HSL/background-1.svg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: repeat;
+    ">
   <div class="summary">
-    ✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨
+    ✨Tour Quốc Tế✨
   </div>
   <div class="description-content-index-sp">
     🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
     ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
     🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
   </div>
+
   {% assign hascategoryPosts = false %}
-  <div class="details">
-    {% for post in site.tours limit:20 %}
-    {% if post.category == 'tours#international' %}
-    <div class="component">
-      <div class="image-container">
-        {% if post.image %}
-        <!-- Ảnh đại diện bài đăng -->
-        <a href="{{ post.url | prepend: site.baseurl }}">
-          <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
-        </a>
-        {% if post.discount %}
-        <!-- Nhãn khuyến mãi -->
-        <div class="promo-label">Giảm -{{ post.discount }}%</div>
-        {% endif %}
-        {% if post.location %}
-        <!-- Địa điểm -->
-        <div class="location-label">
-          <i class="fas fa-map-marker-alt"></i> {{ post.location }}  {% if post.transport %}  |  {{ post.transport }}  {% endif %}
-        </div>
-        {% endif %}
-        {% endif %}
-      </div> <!-- .image-container -->
-      {% assign raw_price = post.price | replace: ".", "" %}
-      {% assign price = raw_price | plus: 0 %}
-      {% assign discount = post.discount | plus: 0 %}
-      {% assign discount_amount = price | times: discount | divided_by: 100 %}
-      {% assign final_price = price | minus: discount_amount %}
 
-      <!-- Tiêu đề bài đăng -->
-      <a href="{{ post.url | prepend: site.baseurl }}">
-        <div class="component-name">
-          <div class="title-label">
-            {% if post.meta-title %}
-            {{ post["meta-title"] }} 
-              {% if post.duration %} | ⏱ {{ post.duration }} {% endif %}
-            {% else %}
-            {{ post.title }}
+  <!-- Swiper container -->
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      {% for post in site.tours limit:20 %}
+      {% if post.categories contains "tours#international" %}
+      <div class="swiper-slide">
+        <div class="component">
+          <div class="image-container">
+            {% if post.image %}
+            <!-- Ảnh đại diện bài đăng -->
+            <a href="{{ post.url | prepend: site.baseurl }}">
+              <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
+            </a>
+            {% if post.discount %}
+            <!-- Nhãn khuyến mãi -->
+            <div class="promo-label">Giảm -{{ post.discount }}%</div>
             {% endif %}
-          </div>
-          <div class="tour-info">
-            <div class="tour-price">
-              {% if post.discount %}
-              <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
-              <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
-              {% else %}
-              <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
-              {% endif %}
-            </div> <!-- /.tour-price -->
-          </div> <!-- /.tour-info -->
-        </div> <!-- .component-name -->
-      </a>
-    </div> <!-- .component -->
-    {% assign hascategoryPosts = true %}
-    {% endif %}
-    {% endfor %}
+            {% if post.location %}
+            <!-- Địa điểm -->
+            <div class="location-label">
+              <i class="fas fa-map-marker-alt"></i> {{ post.location }}
+              {% if post.transport %} | {{ post.transport }} {% endif %}
+            </div>
+            {% endif %}
+            {% endif %}
+          </div> <!-- .image-container -->
 
-    <!-- Nếu không có bài nào -->
-    {% unless hascategoryPosts %}
-    <div class="text-center">
-      <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
-        tiết.</p>
-      {% include qr-zalo.html %}
-    </div> <!-- .text-center -->
-    {% endunless %}
-  </div> <!-- /.details -->
+          {% assign raw_price = post.price | replace: ".", "" %}
+          {% assign price = raw_price | plus: 0 %}
+          {% assign discount = post.discount | plus: 0 %}
+          {% assign discount_amount = price | times: discount | divided_by: 100 %}
+          {% assign final_price = price | minus: discount_amount %}
+
+          <!-- Tiêu đề bài đăng -->
+          <a href="{{ post.url | prepend: site.baseurl }}">
+            <div class="component-name">
+              <div class="title-label">
+                {% if post.meta-title %}
+                {{ post["meta-title"] }} {% if post.duration %} | ⏱ {{ post.duration }} {% endif %}
+                {% else %}
+                {{ post.title }}
+                {% endif %}
+              </div>
+              <div class="tour-info">
+                <div class="tour-price">
+                  {% if post.discount %}
+                  <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
+                  <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
+                  {% else %}
+                  <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </a>
+        </div> <!-- /.component -->
+      </div> <!-- /.swiper-slide -->
+      {% assign hascategoryPosts = true %}
+      {% endif %}
+      {% endfor %}
+    </div> <!-- /.swiper-wrapper -->
+
+    <!-- Pagination dots -->
+    <!-- <div class="swiper-pagination"></div> -->
+    <!-- Navigation arrows -->
+    <!-- <div class="swiper-button-prev"></div> -->
+    <!-- <div class="swiper-button-next"></div> -->
+  </div> <!-- /.swiper -->
+
+  <!-- Nếu không có bài nào -->
+  {% unless hascategoryPosts %}
+  <div class="text-center">
+    <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
+      tiết.</p>
+    {% include qr-zalo.html %}
+  </div>
+  {% endunless %}
 </div> <!-- /#international -->
+
+
+<!-- Layer 2 tour trong nước -->
+
+<div class="gradient-bg">
+  <div class="gradient-text">
+    <p>🏝️ Khám phá thế giới, bắt đầu từ Hùng Vĩ Tourist.</p>
+  </div>
+</div>
+
+<div id="domestic" class="content-index" style="
+      background: 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), 
+        url('/img/Picture-HSL/background-1.svg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: repeat;
+    ">
+  <div class="summary">
+    ✨Tour Trong Nước✨
+  </div>
+  <div class="description-content-index-sp">
+    🏞️ Khám phá cảnh đẹp Việt Nam từ Bắc vào Nam.<br>
+    🚌 Hành trình trọn gói, tiện lợi và tiết kiệm.<br>
+    🏖️ Nhiều lựa chọn tour phù hợp nhu cầu: nghỉ dưỡng, khám phá, văn hoá.
+  </div>
+
+  {% assign hascategoryPosts = false %}
+
+  <!-- Swiper container -->
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      {% for post in site.tours limit:20 %}
+      {% if post.categories contains "tours#domestic" %}
+      <div class="swiper-slide">
+        <div class="component">
+          <div class="image-container">
+            {% if post.image %}
+            <!-- Ảnh đại diện bài đăng -->
+            <a href="{{ post.url | prepend: site.baseurl }}">
+              <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
+            </a>
+            {% if post.discount %}
+            <!-- Nhãn khuyến mãi -->
+            <div class="promo-label">Giảm -{{ post.discount }}%</div>
+            {% endif %}
+            {% if post.location %}
+            <!-- Địa điểm -->
+            <div class="location-label">
+              <i class="fas fa-map-marker-alt"></i> {{ post.location }}
+              {% if post.transport %} | {{ post.transport }} {% endif %}
+            </div>
+            {% endif %}
+            {% endif %}
+          </div> <!-- .image-container -->
+
+          {% assign raw_price = post.price | replace: ".", "" %}
+          {% assign price = raw_price | plus: 0 %}
+          {% assign discount = post.discount | plus: 0 %}
+          {% assign discount_amount = price | times: discount | divided_by: 100 %}
+          {% assign final_price = price | minus: discount_amount %}
+
+          <!-- Tiêu đề bài đăng -->
+          <a href="{{ post.url | prepend: site.baseurl }}">
+            <div class="component-name">
+              <div class="title-label">
+                {% if post.meta-title %}
+                {{ post["meta-title"] }} {% if post.duration %} | ⏱ {{ post.duration }} {% endif %}
+                {% else %}
+                {{ post.title }}
+                {% endif %}
+              </div>
+              <div class="tour-info">
+                <div class="tour-price">
+                  {% if post.discount %}
+                  <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
+                  <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
+                  {% else %}
+                  <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </a>
+        </div> <!-- /.component -->
+      </div> <!-- /.swiper-slide -->
+      {% assign hascategoryPosts = true %}
+      {% endif %}
+      {% endfor %}
+    </div> <!-- /.swiper-wrapper -->
+
+    <!-- Pagination dots -->
+    <!-- <div class="swiper-pagination"></div> -->
+    <!-- Navigation arrows -->
+    <!-- <div class="swiper-button-prev"></div> -->
+    <!-- <div class="swiper-button-next"></div> -->
+  </div> <!-- /.swiper -->
+
+  <!-- Nếu không có bài nào -->
+  {% unless hascategoryPosts %}
+  <div class="text-center">
+    <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
+      tiết.</p>
+    {% include qr-zalo.html %}
+  </div>
+  {% endunless %}
+</div> <!-- /#domestic -->
+
+
+<!-- Layer 2 tour trong nước -->
+
+<div class="gradient-bg">
+  <div class="gradient-text">
+    <p>🏝️ Khám phá thế giới, bắt đầu từ Hùng Vĩ Tourist.</p>
+  </div>
+</div>
+
+<div id="combo" class="content-index" style="
+      background: 
+        linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), 
+        url('/img/Picture-HSL/background-1.svg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: repeat;
+    ">
+  <div class="summary">
+    ✨Combo Du Lịch✨
+  </div>
+  <div class="description-content-index-sp">
+    🎁 Tiết kiệm chi phí với gói combo vé máy bay + khách sạn.<br>
+    🛫 Linh hoạt lựa chọn lịch trình phù hợp.<br>
+    🏨 Nhiều gói khuyến mãi hấp dẫn theo mùa.
+  </div>
+
+  {% assign hascategoryPosts = false %}
+
+  <!-- Swiper container -->
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      {% for post in site.tours limit:20 %}
+      {% if post.categories contains "tours#combo" %}
+      <div class="swiper-slide">
+        <div class="component">
+          <div class="image-container">
+            {% if post.image %}
+            <!-- Ảnh đại diện bài đăng -->
+            <a href="{{ post.url | prepend: site.baseurl }}">
+              <img src="{{ post.image }}" alt="{{ post.title }}" class="avatar" loading="lazy">
+            </a>
+            {% if post.discount %}
+            <!-- Nhãn khuyến mãi -->
+            <div class="promo-label">Giảm -{{ post.discount }}%</div>
+            {% endif %}
+            {% if post.location %}
+            <!-- Địa điểm -->
+            <div class="location-label">
+              <i class="fas fa-map-marker-alt"></i> {{ post.location }}
+              {% if post.transport %} | {{ post.transport }} {% endif %}
+            </div>
+            {% endif %}
+            {% endif %}
+          </div> <!-- .image-container -->
+
+          {% assign raw_price = post.price | replace: ".", "" %}
+          {% assign price = raw_price | plus: 0 %}
+          {% assign discount = post.discount | plus: 0 %}
+          {% assign discount_amount = price | times: discount | divided_by: 100 %}
+          {% assign final_price = price | minus: discount_amount %}
+
+          <!-- Tiêu đề bài đăng -->
+          <a href="{{ post.url | prepend: site.baseurl }}">
+            <div class="component-name">
+              <div class="title-label">
+                {% if post.meta-title %}
+                {{ post["meta-title"] }} {% if post.duration %} | ⏱ {{ post.duration }} {% endif %}
+                {% else %}
+                {{ post.title }}
+                {% endif %}
+              </div>
+              <div class="tour-info">
+                <div class="tour-price">
+                  {% if post.discount %}
+                  <i class="fa-solid fa-sack-dollar"></i><span class="old-price"> {{ price | format_price }}</span><br>
+                  <i class="fa-solid fa-sack-dollar"></i><span class="new-price"> {{ final_price | format_price }}</span>
+                  {% else %}
+                  <i class="fa-solid fa-sack-dollar"></i> {{ post.price }}
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </a>
+        </div> <!-- /.component -->
+      </div> <!-- /.swiper-slide -->
+      {% assign hascategoryPosts = true %}
+      {% endif %}
+      {% endfor %}
+    </div> <!-- /.swiper-wrapper -->
+
+    <!-- Pagination dots -->
+    <!-- <div class="swiper-pagination"></div> -->
+    <!-- Navigation arrows -->
+    <!-- <div class="swiper-button-prev"></div> -->
+    <!-- <div class="swiper-button-next"></div> -->
+  </div> <!-- /.swiper -->
+
+  <!-- Nếu không có bài nào -->
+  {% unless hascategoryPosts %}
+  <div class="text-center">
+    <p>Hiện danh sách dịch vụ tư vấn đang được cập nhật. Quý khách vui lòng liên hệ Hung Vi Tourist để được hỗ trợ chi
+      tiết.</p>
+    {% include qr-zalo.html %}
+  </div>
+  {% endunless %}
+</div> <!-- /#domestic -->
 
 <!-- Layer 4 -->
 
