Cập nhật category

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ bigimg:
 {% include swiper-section.html
    id="special-offer" 
    group="tours"
-   slogan="✈️ Bay cùng niềm vui, đi cùng Hùng Vĩ Tourist."
    title="✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨" 
    desc="     🎉 Giảm giá sốc lên đến 30% cho tour hot nhất.<br>
               ✈️ Ưu đãi vé máy bay & khách sạn trọn gói.<br>
@@ -29,7 +28,6 @@ bigimg:
 {% include swiper-section.html
    id="tours-international" 
    group="tours"
-   slogan="Mỗi chuyến đi – Một kỷ niệm cùng Hùng Vĩ Tourist.✈️"
    title="✨✨Tour Du Lịch Quốc Tế✨✨" 
    desc="     🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
               ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
@@ -45,7 +43,6 @@ bigimg:
 {% include swiper-section.html
    id="tours-domestic" 
    group="tours"
-   slogan="✈️💸 HungVi Tourist – Đi nhiều, giá nhỏ"
    title="✨✨Tour Du Lịch Trong Nước✨✨" 
    desc="     🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
               ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
@@ -61,14 +58,27 @@ bigimg:
 {% include swiper-section.html
    id="visa" 
    group="visa"
-   slogan="🚐🤝 Đi xa để gần hơn – HungVi Tourist.✈️"
    title="✨✨Visa Du Lịch | Công Tác | Du Học✨✨" 
    desc="     🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
               ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
               🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…"
    category="visa#travel,visa#business,visa#study,visa#other"
    limit=20 
-   bg="/img/Picture-HSL/background-2.svg"
+   bg="/img/Picture-HSL/background-taiwan.jpg"
+%}
+
+<!-- Layer 3 visa hộ chiếu -->
+
+{% include swiper-section.html
+   id="flights" 
+   group="flights"
+   title="✨✨Đặt Vé Máy Bay | Hành Trình Mơ Ước✨✨" 
+   desc="     🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
+              ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
+              🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…"
+   category="flights#booking,flights#domestic,flights#international"
+   limit=20 
+   bg="/img/Picture-HSL/background-taiwan.jpg"
 %}
 
 <!-- Layer 4 -->
