Chỉnh lại format code

--- a/index.html
+++ b/index.html
@@ -10,75 +10,85 @@ bigimg:
 
 <!-- Layer 1 Ưu Đãi Đặc Biệt -->
 {% include swiper-section.html
-   id="special-offer" 
-   group="tours"
-   title="✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨" 
-   desc="     🎉 Giảm giá sốc lên đến 30% cho tour hot nhất.<br>
-              ✈️ Ưu đãi vé máy bay & khách sạn trọn gói.<br>
-              🕒 Số lượng có hạn – chỉ áp dụng hôm nay!<br>
-              👉 Đặt ngay để không bỏ lỡ cơ hội vàng!"
-   category="special-offer,hot"
-   limit=20 
-   bg="/img/Picture-HSL/hai-cay-dua-hoang-hon.svg"
+  group="tours"
+  id="special-offer" 
+  title="✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨" 
+  desc="
+    🎉 Giảm giá sốc lên đến 30% cho tour hot nhất.<br>
+    ✈️ Ưu đãi vé máy bay & khách sạn trọn gói.<br>
+    🕒 Số lượng có hạn – chỉ áp dụng hôm nay!<br>
+    👉 Đặt ngay để không bỏ lỡ cơ hội vàng!
+  "
+  category="special-offer,hot"
+  limit=20 
+  bg="/img/Picture-HSL/hai-cay-dua-hoang-hon.svg"
 %}
 
 
 <!-- Layer 2 tour nước ngoài -->
 
 {% include swiper-section.html
-   id="tours-international" 
-   group="tours"
-   title="✨✨Tour Du Lịch Quốc Tế✨✨" 
-   desc="     🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
-              ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
-              🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…"
-   category="tours#international"
-   limit=20 
-   bg="/img/Picture-HSL/background-2.svg"
+  group="tours"
+  id="tours-international"
+  title="✨✨Tour Du Lịch Quốc Tế✨✨" 
+  desc="     
+  🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
+  ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
+  🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
+  "
+  category="tours#international"
+  limit=20 
+  bg="/img/Picture-HSL/background-2.svg"
 %}
 
 
 <!-- Layer 2 tour trong nước -->
 
 {% include swiper-section.html
-   id="tours-domestic" 
-   group="tours"
-   title="✨✨Tour Du Lịch Trong Nước✨✨" 
-   desc="     🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
-              ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
-              🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…"
-   category="tours#domestic"
-   limit=20 
-   bg="/img/tours/domestic/tour-cam-trai-ben-ho-tuyen-lam.jpg"
+  id="tours-domestic" 
+  group="tours"
+  title="✨✨Tour Du Lịch Trong Nước✨✨" 
+  desc="
+  🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
+  ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
+  🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…
+  "
+  category="tours#domestic"
+  limit=20 
+  bg="/img/tours/domestic/tour-cam-trai-ben-ho-tuyen-lam.jpg"
 %}
 
 
 <!-- Layer 3 visa hộ chiếu -->
 
 {% include swiper-section.html
-   id="visa" 
-   group="visa"
-   title="✨✨Visa Du Lịch | Công Tác | Du Học✨✨" 
-   desc="     🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
-              ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
-              🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…"
-   category="visa#travel,visa#business,visa#study,visa#other"
-   limit=20 
-   bg="/img/Picture-HSL/background-taiwan.jpg"
+  group="visa"
+  id="visa" 
+  title="✨✨Visa Du Lịch | Công Tác | Du Học✨✨" 
+  desc="
+  🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
+  ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
+  🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…
+  "
+  category="visa#travel,visa#business,visa#study,visa#other"
+  limit=20 
+  bg="/img/Picture-HSL/background-taiwan.jpg"
 %}
 
 <!-- Layer 3 visa hộ chiếu -->
 
 {% include swiper-section.html
-   id="flights" 
-   group="flights"
-   title="✨✨Đặt Vé Máy Bay | Hành Trình Mơ Ước✨✨" 
-   desc="     🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
-              ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
-              🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…"
-   category="flights#booking,flights#domestic,flights#international"
-   limit=20 
-   bg="/img/Picture-HSL/eva-darron-oCdVtGFeDC0-unsplash.jpg"
+  id="flights" 
+  group="flights"
+  title="✨✨Đặt Vé Máy Bay | Hành Trình Mơ Ước✨✨" 
+  desc="
+  🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
+  ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
+  🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…
+  "
+  category="flights#booking,flights#domestic,flights#international"
+  limit=20 
+  bg="/img/Picture-HSL/eva-darron-oCdVtGFeDC0-unsplash.jpg"
 %}
 
 <!-- Layer 4 -->
@@ -95,5 +105,5 @@ bigimg:
   </div>
 </div>
 
-{% include form-booking.html %}
+<!-- {% include form-booking.html %} -->
 
