--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ bigimg:
     🕒 Số lượng có hạn – chỉ áp dụng hôm nay!<br>
     👉 Đặt ngay để không bỏ lỡ cơ hội vàng!
   "
-  category="special-offer,hot"
-  limit=20 
+  category="special-offer"
+  limit=99 
   bg="/img/Picture-HSL/hai-cay-dua-hoang-hon.svg"
 %}
 
@@ -37,7 +37,7 @@ bigimg:
   🗺️ Nhiều điểm đến hấp dẫn: Châu Á, Châu Âu, Mỹ, Úc…
   "
   category="tours#international"
-  limit=20 
+  limit=99 
   bg="/img/Picture-HSL/background-2.svg"
 %}
 
@@ -54,7 +54,7 @@ bigimg:
   🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…
   "
   category="tours#domestic"
-  limit=20 
+  limit=99 
   bg="/img/tours/domestic/tour-cam-trai-ben-ho-tuyen-lam.jpg"
 %}
 
@@ -71,7 +71,7 @@ bigimg:
   🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…
   "
   category="visa#travel,visa#business,visa#study,visa#other"
-  limit=20 
+  limit=99 
   bg="/img/Picture-HSL/background-taiwan.jpg"
 %}
 
@@ -87,7 +87,7 @@ bigimg:
   🗺️ Nhiều điểm đến hấp dẫn: Hà Nội, Đà Nẵng, TP.HCM…
   "
   category="flights#booking,flights#domestic,flights#international"
-  limit=20 
+  limit=99 
   bg="/img/Picture-HSL/eva-darron-oCdVtGFeDC0-unsplash.jpg"
 %}
 
