Cập nhật bài viết và hình ảnh

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ bigimg:
   "
   category="tours#domestic"
   limit=99 
-  bg="/img/tours/domestic/tour-cam-trai-ben-ho-tuyen-lam.jpg"
+  bg="/img/Picture-HSL/phong-canh-xanh.svg"
 %}
 
 
