Cập nhật giao diện và số điện thoại

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ bigimg:
 {% include swiper-section.html
   group="tours"
   id="special-offer" 
-  title="✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨" 
+  title="🔥Ưu Đãi Đặc Biệt🔥" 
   desc="
     🎉 Giảm giá sốc lên đến 30% cho tour hot nhất.<br>
     ✈️ Ưu đãi vé máy bay & khách sạn trọn gói.<br>
@@ -30,7 +30,7 @@ bigimg:
 {% include swiper-section.html
   group="tours"
   id="tours-international"
-  title="✨✨Tour Du Lịch Quốc Tế✨✨" 
+  title="Tour Du Lịch<br>✨Quốc Tế✨" 
   desc="     
   🌍 Trải nghiệm hành trình khám phá năm châu bốn bể.<br>
   ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
@@ -47,7 +47,7 @@ bigimg:
 {% include swiper-section.html
   id="tours-domestic" 
   group="tours"
-  title="✨✨Tour Du Lịch Trong Nước✨✨" 
+  title="Tour Du Lịch<br>✨Trong Nước✨" 
   desc="
   🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
   ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
@@ -64,7 +64,7 @@ bigimg:
 {% include swiper-section.html
   group="visa"
   id="visa" 
-  title="✨✨Visa Du Lịch | Công Tác | Du Học✨✨" 
+  title="Visa Du Lịch<br>✨Công Tác | Du Học✨" 
   desc="
   🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
   ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
@@ -80,7 +80,7 @@ bigimg:
 {% include swiper-section.html
   id="flights" 
   group="flights"
-  title="✨✨Đặt Vé Máy Bay | Hành Trình Mơ Ước✨✨" 
+  title="✨Vé Máy Bay✨" 
   desc="
   🌍 Trải nghiệm hành trình khám phá Việt Nam.<br>
   ✈️ Tour trọn gói từ vé máy bay, khách sạn đến tham quan.<br>
