--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 ---
 layout: page
-meta-title: "HÙNG VĨ TOURIST"
+#meta-title: "HÙNG VĨ TOURIST"
 bigimg:
-- "/img/Picture-HSL/japan-background.jpg"
-- "/img/Picture-HSL/background-1.svg"
-- "/img/Picture-HSL/background-2.svg"
-- "/img/Picture-HSL/background-3.svg"
+- "/img/Picture-HSL/background-taiwan.jpg"  : "Taiwan"
+- "/img/Picture-HSL/japan-background.jpg"  : "Japan"
+- "/img/Picture-HSL/taiwan.jpg"  : "Taiwan"
+- "/img/Picture-HSL/bali-1.jpg"  : "Bali"
+- "/img/Picture-HSL/singapore.jpg"  : "Singapore"
+- "/img/Picture-HSL/bali.jpg"  : "Bali"
+- "/img/Picture-HSL/peru.jpg"  : "Peru"
 ---
 
 <!-- Layer 1 Ưu Đãi Đặc Biệt -->
